# django-docutils

./: .gitignore  .readthedocs.yml  .tmuxp.yaml  .travis.yml  AGENTS.md  AUTHORS.rst  CHANGES  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  conftest.py  justfile  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  django-docutils.yml  docs.yml  publish-docs.yml  tests.yml
django_docutils/: __about__.py  conftest.py  directives.py  engines.py  exc.py  views.py
django_docutils/favicon/: models.py  prefetch.py  scrape.py
django_docutils/favicon/management/commands/: prefetch_favicons.py
django_docutils/favicon/migrations/: 0001_initial.py
django_docutils/favicon/rst/: nodes.py
django_docutils/favicon/rst/transforms/: favicon.py
django_docutils/favicon/tests/: conftest.py  test_prefetch.py  test_scrape.py  test_store.py
django_docutils/favicon/tests/test_app/: __init__.py  apps.py  models.py
django_docutils/lib/: publisher.py  settings.py  text.py  utils.py  views.py  writers.py
django_docutils/lib/directives/: __init__.py  code.py
django_docutils/lib/fixtures/: __init__.py  load.py  publisher.py  utils.py
django_docutils/lib/fixtures/directory/: __init__.py  extract.py  utils.py
django_docutils/lib/fixtures/tests/: conftest.py  test_fixtures.py  test_load.py  test_publishers.py  test_utils.py
django_docutils/lib/metadata/: extract.py  process.py  processors.py
django_docutils/lib/metadata/tests/: test_extract.py  test_process.py
django_docutils/lib/roles/: __init__.py  amazon.py  common.py  develtech.py  email.py  file.py  github.py  hackernews.py  kbd.py  leanpub.py  pypi.py  readthedocs.py  twitter.py  url.py  wikipedia.py
django_docutils/lib/templates/rst/: raw.html
django_docutils/lib/templatetags/: rst.py
django_docutils/lib/tests/: test_utils.py  test_writers.py
django_docutils/lib/transforms/: ads.py  code.py  font_awesome.py  toc.py
django_docutils/pygments/: lexers.py
django_docutils/references/: models.py
django_docutils/references/intersphinx/: load.py  utils.py
django_docutils/references/management/commands/: loaddata_intersphinx.py
django_docutils/references/migrations/: 0001_initial.py
django_docutils/references/rst/: roles.py  utils.py
django_docutils/references/rst/transforms/: xref.py
django_docutils/rst_post/: models.py
django_docutils/rst_post/management/commands/: loaddata_grow.py
django_docutils/rst_post/models/: __init__.py  checks.py  post.py  post_page.py  utils.py
django_docutils/rst_post/models/tests/: conftest.py  test_models.py
django_docutils/taxonomy/: models.py
django_docutils/templatetags/: django_docutils.py
doc/: Makefile  conf.py  index.rst  requirements.txt
doc/_static/: django-docutils.css
doc/_templates/: layout.html  star.html
docs/: AGENTS.md  Makefile  api.md  api.rst  class_based_view.md  conf.py  django_view.md  faq.md  history.rst  index.md  index.rst  installation.rst  justfile  manifest.json  quickstart.md  redirects.txt  requirements.txt  template_filter.md  template_tag.md  usage.rst
docs/_static/img/icons/: site.webmanifest
docs/_templates/: layout.html  more.html  page.html
docs/api/: directives.md  engines.md  exc.md  index.md  models.md  template.md  views.md
docs/api/favicon/: index.md  models.md  prefetch.md
docs/api/favicon/rst/: index.md  nodes.md
docs/api/lib/: components.md  index.md  publisher.md  sanitize.md  settings.md  text.md  types.md  utils.md  views.md  writers.md
docs/api/lib/directives/: code.md  index.md  registry.md
docs/api/lib/fixtures/: index.md  load.md  publish.md  utils.md
docs/api/lib/metadata/: extract.md  index.md  process.md  processors.md
docs/api/lib/roles/: amazon.md  common.md  develtech.md  email.md  file.md  github.md  hackernews.md  index.md  kbd.md  leanpub.md  pypi.md  readthedocs.md  registry.md  twitter.md  types.md  url.md  wikipedia.md
docs/api/lib/templatetags/: index.md  rst.md
docs/api/lib/transforms/: ads.md  code.md  font_awesome.md  index.md  toc.md
docs/api/pygments/: index.md  lexers.md
docs/api/references/: index.md  models.md
docs/api/references/intersphinx/: index.md  load.md  utils.md
docs/api/references/rst/: index.md  nodes.md  roles.md  utils.md
docs/api/templatetags/: django_docutils.md  index.md
docs/project/: code-style.md  contributing.md  index.md  releasing.md
docs/topics/: class_based_view.md  faq.md  index.md  security.md  template_filter.md  template_tag.md  what_is_docutils.md
requirements/: base.txt  dev.txt  doc.txt  test.txt
scripts/: runtime_dep_smoketest.py  test_runtime_dep_smoketest.py
src/django_docutils/: __about__.py  __init__.py  conftest.py  directives.py  engines.py  exc.py  template.py  views.py
src/django_docutils/_internal/: types.py
src/django_docutils/favicon/: __init__.py  models.py  prefetch.py  scrape.py
src/django_docutils/favicon/rst/: nodes.py
src/django_docutils/favicon/tests/: conftest.py  test_prefetch.py  test_scrape.py  test_store.py
src/django_docutils/lib/: __init__.py  publisher.py  sanitize.py  settings.py  text.py  types.py  utils.py  views.py  writers.py
src/django_docutils/lib/directives/: __init__.py  code.py  registry.py
src/django_docutils/lib/fixtures/: load.py  publisher.py  utils.py
src/django_docutils/lib/metadata/: __init__.py  extract.py  process.py  processors.py
src/django_docutils/lib/roles/: __init__.py  amazon.py  common.py  develtech.py  email.py  file.py  github.py  hackernews.py  kbd.py  leanpub.py  pypi.py  registry.py  (+5 more)
src/django_docutils/pygments/: lexers.py
src/django_docutils/references/: models.py
src/django_docutils/templatetags/: __init__.py  django_docutils.py
tests/: __init__.py  constants.py  sanitize_fixtures.py  settings.py  test_docs_examples.py  test_docutils_roles.py  test_engine.py  test_models.py  test_security.py  test_settings.py  test_template.py  test_templatetag.py
tests/rst_content/: home.rst
type_stubs/pygments/: __init__.pyi  lexer.pyi
(+49 files in other folders)
